<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        tools:context=".fragment.BlankFragment">


    <TextView
            android:text="@string/intent_hint"
            android:textSize="@dimen/hint_text_size"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/video_play"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
            android:text="@string/fast_forward_hint"
            android:textSize="@dimen/hint_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fast_forward"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/video_play"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
            android:text="@string/next_intent"
            android:textSize="@dimen/hint_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/next_video"
            app:layout_constraintTop_toBottomOf="@id/fast_forward"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
            android:text="@string/previous_intent"
            android:textSize="@dimen/hint_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/previous_video"
            app:layout_constraintTop_toBottomOf="@id/next_video"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
            android:text="@string/result_intent"
            android:textSize="@dimen/hint_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/result_intent_detail"
            app:layout_constraintTop_toBottomOf="@id/previous_video"
            app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>