<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.audio.AudioDemoActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_start_record"
        android:id="@+id/dueros_record_demo"
        android:padding="10dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20dp"
        android:text="@string/audio_record_duration"
        app:layout_constraintLeft_toRightOf="@id/dueros_record_demo"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/demo_record_duration"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_start_play"
        android:id="@+id/dueros_play_record_demo"
        android:padding="10dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/record_config_container"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/record_config_container"
        app:layout_constraintTop_toBottomOf="@id/dueros_record_demo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal" >

            <!-- 声道选择 -->
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/voice_channel_selector_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/radio_double_channel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_double_voice_channel" />
                    <!-- 第二個RadioButton -->

                    <RadioButton
                        android:id="@+id/radio_single_channel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_single_voice_channel" />
                </RadioGroup>
            </LinearLayout>

            <!-- 频率选择 -->
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/frequency_selector_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/frequency_16k"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_16k_frequency" />
                    <!-- 第二個RadioButton -->

                    <RadioButton
                        android:id="@+id/frequency_22k"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio2_22K_frequency" />

                    <RadioButton
                        android:id="@+id/frequency_11k"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio2_11K_frequency" />
                </RadioGroup>
            </LinearLayout>

            <!-- 位宽选择 -->
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/bit_width_selector_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/bit_width_16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio3_bit_width_16" />
                    <!-- 第二個RadioButton -->

                    <RadioButton
                        android:id="@+id/bit_width_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio3_bit_width_8" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>